<resources>
    <string name="app_name">Florify</string>
    <string name="welcome_h1">Create your dream flower garden with the help of PlanetH</string>
    <string name="welcome_h2">Green the World, Starting from Your Home</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="name">Fullname</string>
    <string name="password">Password</string>
    <string name="error_message_email">Invalid Email Format</string>
    <string name="error_message_password">Password must be more than 8 characters</string>
    <string name="error_message_username">Username must be less than 15 characters</string>
    <string name="sign_up">or sign up with</string>
    <string name="welcome">Welcome!</string>
    <string name="login_welcome">Sign in now</string>
    <string name="register_welcome">Thank you for choosing us! Let\'s register to start an amazing journey</string>
    <string name="register_text">Don\'t have an account yet?</string>
    <string name="login_text">Already have an account?</string>
    <string name="new_account">New Account</string>
    <string name="sign_up_start">Sign up and get started</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home</string>
    <string name="title_forum">Forum</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_crop_shield">CropShield</string>
    <string name="title_encyclopedia">Encyclopedia</string>
    <string name="search">Search here…</string>
    <string name="dashbord">Dashbord</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="florify">FLORIFY</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="arrow">arrow</string>
    <string name="all_fields_required">All fields are required</string>
    <string name="tutorial_image">tutorial image</string>
    <string name="scan">Scan</string>
    <string name="scan_description">Scan your plant for diseases to learn more about its condition.</string>
    <string name="try_it_now">try it now</string>
    <string name="let_s_keep_your_plants_healthy">Let’s keep your plants healthy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="third">Third</string>
    <string name="second">Second</string>
    <string name="first">First</string>
    <string name="next">Next</string>
    <string name="desc_menu_1">Welcome to the plant disease detection app. Get comprehensive information about plant health quickly and accurately.</string>
    <string name="desc_menu_3">Identify plant issues and take appropriate action with just a few easy steps.</string>
    <string name="desc_menu_2">Discover solutions for your plants with detailed information about various types of diseases that may affect them.</string>
    <string name="get_started">Get Started</string>
    <string name="fragment_camera">fragment_camera</string>
    <string name="image_result">image_result</string>
    <string name="back_button">back button</string>
    <string name="camera_button">camera_button</string>
    <string name="handling">Handling</string>
    <string name="protect_your_plants">Protect Your Plants</string>
    <string name="essential_tips_for_identifying_and_preventing_plant_diseases">Essential Tips for Identifying and Preventing Plant Diseases</string>
    <string name="encyclopedia">Encyclopedia</string>
    <string name="view_more">View more...</string>
    <string name="exit">Exit</string>
    <string name="predictions">Predictions : </string>
    <string name="history">History</string>
    <string name="update">Update</string>
    <string name="post">Forum</string>
    <string name="discover_the_beauty_in_every_leaf">Discover the Beauty in Every Leaf</string>
    <string name="dive">Learn How to Understand and Care for Them Well.</string>
    <string name="comments">Comments</string>
    <string name="post_to_forum">Post to Forum</string>
    <string name="submit">Submit</string>
    <string name="scan_result">Scan Result :</string>
    <string name="detail">Detail</string>
    <string name="corn">Corn</string>
    <string name="rice">Rice</string>
    <string name="potato">Potato</string>
    <string name="delete_account">delete account</string>
    <string name="update_account">Update Account</string>
    <string name="account">Account</string>
    <string name="delete_all_history">delete all history</string>
    <string name="history_button">History</string>
    <string name="history_text">History</string>
</resources>