<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_ensiklopedia"
        android:icon="@drawable/book"
        android:title="@string/title_encyclopedia" />

    <item
        android:id="@+id/navigation_scan"
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/forum"
        android:title="@string/title_forum" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />

</menu>