<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.welcome.login.Login">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="70dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/welcome"
        android:textColor="@color/grey"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/welcome_image"
            android:src="@drawable/app_icon" />

        <TextView
            android:id="@+id/welcome1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:text="@string/login_welcome"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="42sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome" />

        <com.example.florify.customview.EmailEditText
            android:id="@+id/emailEditText"
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/grey"
            android:alpha="0"
            android:background="@drawable/edittext"
            android:drawableStart="@drawable/email"
            android:drawablePadding="10dp"
            android:focusable="true"
            android:textSize="18sp"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:textColorHint="@color/grey"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            tools:alpha="100" />

        <com.example.florify.customview.PasswordEditText
            android:id="@+id/passwordEditText"
            android:layout_width="330dp"
            android:textColor="@color/grey"
            android:layout_height="60dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp"
            android:alpha="0"
            android:background="@drawable/edittext"
            android:drawableStart="@drawable/password"
            android:drawablePadding="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:textColorHint="@color/grey"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textSize="18sp"
            tools:alpha="100" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:alpha="0"
            android:background="@drawable/login_button"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:alpha="100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/grey"
                android:text="@string/register_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/go_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/register"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>